--- a/index.css
+++ b/index.css
@@ -1,15 +1,15 @@
 body{
-	font-family: cursive;
+	font-family: 'Fredoka', sans-serif;
 	background-color:#99ff99;
 }
 
 #b{
 	background-color: #0099ff;
-	font-family: cursive;
+	font-family: 'Fredoka', sans-serif;
 }
 input{
 	border-color:black;
-	font-family: cursive;
+	font-family: 'Fredoka', sans-serif;
 	font-size: 20px;
 }
 #tips{
@@ -22,6 +22,7 @@ input{
 	transform: rotateZ(5deg);
 	background-color:white;
 	display: inline-block;
+	font-family: 'Fredoka', sans-serif;
 }
 #img1{
 	left: 5%;
