--- a/index.css
+++ b/index.css
@@ -38,3 +38,10 @@ body{
 	background-repeat:no-repeat;
 	background-size: 100% 100%;
 }
+#help{
+	position: absolute;
+	top: 100%;
+}
+#info{
+	font-size: 50px;
+}
